--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,5 +1,12 @@
 @import './base.css';
 
+/* Disable scrolling */
+body, html {
+  overflow: hidden;
+  height: 100%;
+  margin: 0;
+}
+
 #app {
   max-width: 1280px;
   margin: 0 auto;
@@ -7,6 +14,14 @@
   font-weight: normal;
   height: 100vh;
   overflow: hidden;
+  position: relative; /* Add this */
+}
+
+/* Add this new rule */
+main {
+  overflow: hidden;
+  height: 100%;
+  position: relative;
 }
 
 a,
