--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,5 +1,6 @@
 /* color palette from <https://github.com/vuejs/theme> */
 :root {
+  --tams-bg-color-primary: #f4eddd;
   --vt-c-white: #ffffff;
   --vt-c-white-soft: #f8f8f8;
   --vt-c-white-mute: #f2f2f2;
@@ -61,7 +62,7 @@
 body {
   min-height: 100vh;
   color: var(--color-text);
-  background: var(--color-background);
+  background: var(--tams-bg-color-primary);
   transition:
     color 0.5s,
     background-color 0.5s;
